CompleK8s_WebApp_3/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-cient-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: complex-web
  template:
    metadata:
      labels:
        component: complex-web
    spec:
      containers:
      - name: client
        image: stephengrider/multi-client
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
