CompleK8s_WebApp_3/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: complex-postgres
  template:
    metadata:
      labels:
         component: complex-postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
