CompleK8s_WebApp_3/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: complex-redis
  template:
    metadata:
      labels:
        component: complex-redis
    spec:
      containers:
      - name: redis
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
