CompleK8s_WebApp_3/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: complex-server
  template:
    metadata:
      labels:
        component: complex-server
    spec:
      containers:
      - name: server
        image: stephengrider/multi-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
