CompleK8s_WebApp_3/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complex-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: complex-server
  template:
    metadata:
      labels:
        component: complex-server
    spec:
      containers:
      - name: worker
        image: stephengrider/multi-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        #ports:
        #- containerPort: <Port>
