CompleK8s_WebApp_3/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complex-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: complex-web
  ports:
  - port: 3000
    targetPort: 3000
