CompleK8s_WebApp_3/k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complex-postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: complex-postgres
  ports:
  - port: 5432
    targetPort: 5432
