CompleK8s_WebApp_3/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complex-redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: complex-redis
  ports:
  - port: 6379
    targetPort: 6379
