CompleK8s_WebApp_3/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complex-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: complex-server
  ports:
  - port: 5000
    targetPort: 5000
